cot-macros/tests/ui/attr_migration_op_not_async.stderr
error: migration operation must be an `async` function
 --> tests/ui/attr_migration_op_not_async.rs:7:1
  |
7 | fn my_migration(_ctx: MigrationContext<'_>) -> Result<()> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
